tests/compiletests/ui/arch/subgroup/subgroup_cluster_size_non_power_of_two_fail.stderr
error[E0080]: evaluation panicked: `ClusterSize` must be a power of 2
   --> $SPIRV_STD_SRC/arch/subgroup.rs:829:1
    |
829 | / macro_subgroup_op_clustered!(impl Integer, "OpGroupNonUniformIAdd", subgroup_clustered_i_add; r"
830 | | An integer add group operation of all `value` operands contributed by active invocations in the group.
831 | |
832 | | Result Type must be a scalar or vector of integer type.
...   |
845 | | * `ClusterSize` must not be greater than the size of the group
846 | | ");
    | |__^ evaluation of `spirv_std::arch::subgroup_clustered_i_add::<5, u32, u32>::{constant#0}` failed here
    |
    = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `macro_subgroup_op_clustered` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
   --> $SPIRV_STD_SRC/arch/subgroup.rs:829:1
    |
829 | / macro_subgroup_op_clustered!(impl Integer, "OpGroupNonUniformIAdd", subgroup_clustered_i_add; r"
830 | | An integer add group operation of all `value` operands contributed by active invocations in the group.
831 | |
832 | | Result Type must be a scalar or vector of integer type.
...   |
845 | | * `ClusterSize` must not be greater than the size of the group
846 | | ");
    | |__^
    |
    = note: this note originates in the macro `macro_subgroup_op_clustered` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn spirv_std::arch::subgroup_clustered_i_add::<5, u32, u32>`
  --> $DIR/subgroup_cluster_size_non_power_of_two_fail.rs:10:5
   |
10 |     spirv_std::arch::subgroup_clustered_i_add::<5, _>(value)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
